# qet-bench

./: .gitignore  README.md
qet-bench/: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
qet-bench/docs/: artifact_manifest.md  blocker_ledger.md  controller_battery_accounting.md  energy_accounting.md  noise_survival.md  null_tests.md  qet_model.md  qiskit_interop.md  release_validation.md  research_program.md  research_roadmap.md  vacuum_investigation_roadmap.md
qet-bench/paper/: README.md  paper.md  references.bib  rescience.md
qet-bench/results/data/: amplitude_damping_sweep.csv  benchmarks.csv  bob_angle_miscalibration_sweep.csv  bob_only_random_scan.csv  dephasing_sweep.csv  depolarizing_sweep.csv  feedforward_error_sweep.csv  h_over_k_sweep.csv  k_zero_scan.csv  noise_crossings.csv  noise_survival_curves.csv  noise_survival_summary.csv  noise_survival_summary.json  null_tests_summary.json  readout_confusion_example.json  readout_error_sweep.csv  reference_branch_audit_h1_k0p5.csv  reference_branch_benchmarks.csv  (+2 more)
qet-bench/scripts/: make_all_figures.py  reproduce_benchmarks.py  run_noise_survival.py  run_noise_sweeps.py  run_null_tests.py  run_parameter_sweep.py  run_qiskit_bridge.py  run_reference_branch.py
qet-bench/tests/: test_controller.py  test_counts.py  test_exact_benchmarks.py  test_global_accounting.py  test_hamiltonian.py  test_noise_readout.py  test_noisy_sweeps.py  test_null_k_zero.py  test_pauli.py  test_qiskit_bridge.py  test_reference_branch.py  test_scrambled_bit.py  test_survival.py
(+16 files in other folders)
